<resources>
<<<<<<< HEAD
    <string name="app_name">eMan</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_mobile">This mobile number is invalid</string>
    <string name="error_invalid_name">You can not use any symbol/special character in name</string>
    <string name="error_size_name">You can use maximum 60 characters</string>
    <string name="error_invalid_password">Minimum password length is 6</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_confirm_password">password does not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_login_failed">Invalid Password or Phone Number</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_home">Home</string>
    <string name="title_fragment_packages">Packages</string>
    <string name="title_fragment_create_order">Create Order</string>
    <string name="msg">Please enable all permission</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="verification_header_msg">Please the code that was sent to your mobile </string>
    <string name="verification_input_hint">Enter Code Here</string>
    <string name="pick_up_location">Pick up location</string>
    <string name="delivery_address">Delivery:</string>
    <string name="label_next">  Next  </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="package_size">Package Size</string>
    <string name="label_price">✓Price:</string>
    <string name="label_time">✓Time:</string>
    <string name="label_size">✓Size:</string>
    <string name="label_weight">✓Weight:</string>
    <string name="label_button_confirm">Confirm</string>
    <string name="label_payment_policy">Payment Policy</string>
    <string name="label_amount_payable">Amount Payable:</string>
    <string name="label_lead_time">Lead Time:</string>
    <string name="label_max_weight">Max Weight:</string>
    <string name="label_package_size">Package Size:</string>
    <string name="label_package">Package:</string>
    <string name="label_sender_address">Address:</string>
    <string name="label_receiver_address">Address:</string>
    <string name="label_receiver_phone">Receiver\'s Phone:</string>
    <string name="label_receiver_name">Receiver\'s Name:</string>
    <string name="label_sender_phone">Sender\'s Phone:</string>
    <string name="label_sender_name">Sender\'s Name:</string>
    <string name="collection_address">Collection:</string>
    <string name="order_status">Order Status</string>
    <string name="date">Date</string>
    <string name="label_standard">Standard</string>
    <string name="label_emergency">Emergency</string>
    <string name="crash_toast_text">Oops Something Is</string>
    <string name="alert_drag_map">Drag map and choose location precisely</string>
    <string name="alert_enter_right_loc">Please Enter Specific Delivery Address!</string>
    <string name="alert_gps_disabled_wanna_enable">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="alert_enable_gps">Goto Settings To Enable GPS</string>
    <string name="alert_install_play_services">Please Install Google Play Services!</string>
    <string name="alert_press_again_exit">Press once again to exit</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_gender">Gender:</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_account_type">Account type:</string>
    <string name="label_individual">Individual</string>
    <string name="label_corporate">Corporate</string>
    <string name="label_collection_time">Collection Time </string>
    <string name="label_delivery_time">Delivery Time</string>
    <string name="label_login">Login</string>
    <string name="label_mobile_no">Mobile No</string>
    <string name="label_signup_now">New User? SignUp Now!</string>
    <string name="label_forgot_password">Forgot Password ?</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_mobile">Mobile</string>
    <string name="label_date_of_birth">Date Of Birth :</string>
    <string name="label_yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_already_registered_login_no">Already Registered ? Login Now !</string>
    <string name="label_email">Email</string>
    <string name="label_4_hours">4 Hours</string>
    <string name="label_6_hours">6 Hours</string>
    <string name="label_same_day">Same Day</string>
    <string name="label_next_day">Next Day</string>
    <string name="label_package_info">Package Info</string>
    <string name="label_package_weight">Package weight</string>
    <string name="label_package_type">Package Type</string>
    <string name="label_package_price">Package Price</string>
    <string name="label_pick_time">Pick Time</string>
    <string name="label_document">Document</string>
    <string name="label_goods">Goods</string>
    <string name="label_electronics">Electronics</string>
    <string name="label_valuable">Valuable</string>
    <string name="label_others">Others</string>
    <string name="label_product_description">Product Description</string>
    <string name="label_promo_code">Promo Code</string>
    <string name="label_button_apply">Apply</string>
    <string name="label_button_next">Next</string>
    <string name="label_cb_others">Others</string>
    <string name="label_call">Call</string>
    <string name="label_sms">SMS</string>
    <string name="label_app">App</string>
    <string name="label_collection_instruction">Collection Instruction</string>
    <string name="location_turnon_message">Turn on location services in your device settings to improve your pickup experience.</string>
    <string name="label_password">Password</string>
    <string name="label_order_price">Price</string>
    <string name="label_discount">Discount</string>
    <string name="label_payment_amount">Payment Amount</string>
    <string name="label_payment_method">Payment Method</string>
    <string name="label_status">Status</string>
    <string name="label_order_tracking_no">Order Tracking No</string>
    <string name="label_collection">Collection</string>
    <string name="label_delivery">Delivery</string>
    <string name="toolbar_order_details">Order Details</string>
    <string name="label_terms_conditions"><u>Terms and Conditions</u></string>
    <string name="label_turn_on_location_service">turn on location service</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="place_order">Place Order</string>
    <string name="order_history">Order History</string>
    <string name="track_order">Track Order</string>
    <string name="special_offer">Special Offer</string>
    <string name="promotion">Promotion</string>
    <string name="eman_service">eMan Service</string>
    <string name="join_eman">Join eMan</string>
    <string name="profile">Profile</string>
    <string name="legal">Legal</string>
=======
    <string name="app_name">EMan</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="create_account">No account yet? Create one</string>
    <string name="forget_password">Forget Password?</string>

>>>>>>> f1d7c6981594caf14c33c68db026f5559201bbf9
</resources>
