<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/llSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/logo_height"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/child_margin_top"
            android:textColorHint="@color/colorOrange">

            <EditText
                android:id="@+id/etRegFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_person"
                android:hint="@string/label_first_name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiSurName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/child_margin_top"
            android:textColorHint="@color/colorOrange">

            <EditText
                android:id="@+id/etRegSurName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_person"
                android:hint="@string/label_last_name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/child_margin_top"
            android:textColorHint="@color/colorOrange"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white">

            <EditText
                android:id="@+id/etRegMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_mobile"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/child_margin_top"
            android:textColorHint="@color/colorOrange">

            <EditText
                android:id="@+id/etRegEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_email"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/child_margin_top"
            android:textColorHint="@color/colorOrange"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white">

            <EditText
                android:id="@+id/etRegPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/child_margin_top"
            android:textColorHint="@color/colorOrange"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white">

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_confirm_password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/card_margin"
                android:text="@string/label_gender"
                android:textColor="@color/colorOrange"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_male" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_female" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radioOthers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_others" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_date_of_birth"
                android:textColor="@color/colorOrange"
                android:textSize="@dimen/text_large" />

            <TextView
                android:id="@+id/tvDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/card_margin"
                android:paddingStart="@dimen/card_margin"
                android:textColor="@color/colorBlack"
                android:textAlignment="center"
                android:text="@string/label_yyyy_mm_dd"
                android:textSize="@dimen/text_medium" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_account_type"
                android:gravity="center"
                android:textColor="@color/colorOrange"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/radioGroupUserType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radioIndividual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/label_individual" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radioCorporate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_corporate" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/shape_round"
            android:text="@string/label_sign_up"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tvBackToLoginMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/button_margin"
            android:text="@string/label_already_registered_login_no"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBackToLoginMsg"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/button_margin"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>