<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llSignIn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_logo"
            android:layout_marginTop="@dimen/child_margin_top"
            android:textColorHint="@color/colorOrange">

            <EditText
                android:id="@+id/etLoginMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_mobile_no"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ti_phone"
            android:layout_marginTop="@dimen/child_margin_top"
            android:textColorHint="@color/colorOrange"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white">

            <EditText
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ti_password"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/shape_round"
            android:text="@string/label_login"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/btn_login"
            android:layout_below="@+id/btn_login"
            android:layout_marginStart="25dp"
            android:layout_marginTop="11dp"
            android:text="@string/label_signup_now"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ti_password"
            android:layout_toEndOf="@+id/progress"
            android:text="@string/label_forgot_password"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_forgot_password"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:visibility="gone" />

    </RelativeLayout>
</LinearLayout>