<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.jarvishub.emandemo.ui.orderHistory.OrderHistory">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardOrder"
        android:clickable="true"
        android:layout_marginTop="5dp"
        android:layout_margin="@dimen/card_items_margin"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/border_style"
            android:padding="10dp"
            >
            <TextView
                android:id="@+id/tvOrderStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="bla bla bla"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="5dp"
                android:textSize="17sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/date"
                    android:padding="5dp"
                    android:textSize="17sp"
                    android:textColor="@color/colorBasic"
                    />
                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/label_order_price"
                    android:gravity="end"
                    android:padding="5dp"
                    android:textSize="17sp"
                    android:textColor="@color/colorBasic"

                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="7"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:padding="5dp"
                    android:textSize="12sp"
                    android:textColor="@color/colorFont"
                    android:text="@string/collection_address" />
                <TextView
                    android:id="@+id/tvPickupAddress"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:padding="5dp"
                    android:textSize="12sp"
                    android:textColor="@color/colorFont"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="7"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="5dp"
                    android:textColor="@color/colorFont"
                    android:textSize="12sp"
                    android:text="@string/delivery_address"/>
                <TextView
                    android:id="@+id/tvDeliveredAddress"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:padding="5dp"
                    android:textColor="@color/colorFont"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
