<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_home">

    <FrameLayout
        android:id="@+id/frameLayoutMap"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">

        <fragment
            android:id="@+id/mapFragment"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewFromAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/etFromAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/ract"
                android:drawableLeft="@drawable/ic_green_dot"
                android:drawablePadding="5dp"
                android:hint="@string/pick_up_location"
                android:padding="10dp"
                android:maxLines="2"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="13sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewToAddress"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="75dp">

            <EditText
                android:id="@+id/etToAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/ract"
                android:drawableLeft="@drawable/ic_destination_photo"
                android:drawablePadding="5dp"
                android:hint="@string/delivery_address"
                android:padding="10dp"
                android:focusableInTouchMode="true"
                android:maxLines="2"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="13sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSubmitAddress"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:background="@color/colorBasic"
            android:text="@string/label_next" />

        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:src="@drawable/map_marker"
            android:text="TextView" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayoutServicePackages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        android:visibility="visible"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp" />

    <FrameLayout
        android:id="@+id/frameLayoutCreateOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        android:visibility="visible"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp" />

</LinearLayout>